<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="80dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondScreen">

    <TextView
        android:id="@+id/AboutYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hello" />

    <TextView
        android:id="@+id/inName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
      android:layout_marginLeft="12dp"
        android:text="@string/your_name" />
</LinearLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:text="@string/i_can_contact_you_at"
    />

    <TextView
        android:id="@+id/Num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/your_number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_weight="1"
        android:gravity="center"
        android:text="@string/you_were_born_on"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Dob"
        android:layout_weight="1"
        android:text="@string/your_d_o_b"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/you_are_studying"
            />
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:id="@+id/InYes"-->
<!--            android:layout_weight="1"-->
<!--            android:text=" ${no} "/>-->
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/Back"/>


</LinearLayout>